feat : 게임 중 DB 실시간 반영 기능 구현